# OC_P2_Fashion_Trend_Intelligence

./: .env.example  .gitattributes  CONTRIBUTING.md  README.md  pyproject.toml
notebooks/: example_visualisation_notebook.ipynb  huggingface_api_cloth_seg.ipynb  previous_notebook.ipynb
notebooks/archives/: previous_notebook.ipynb
scripts/: test_hf_connection.py
src/oc_p2_fashion_trend_intelligence/utils/: connection_utils.py  image_utils.py
